--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-typescript": "^7.23.3",
     "@types/jest": "^29.5.11",
+    "@types/mailgun-js": "^0.22.18",
     "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.0",
@@ -26,9 +27,11 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
     "express-ws": "^5.0.2",
+    "form-data": "^4.0.0",
     "helmet": "^6.0.1",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
+    "mailgun.js": "^10.2.1",
     "mongodb": "^4.13.0",
     "mongoose": ">=6.11.3",
     "multer": "^1.4.5-lts.1",
@@ -38,7 +41,6 @@
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.6.1",
     "supertest": "^6.3.4",
-    "ts-mailgun": "^0.5.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
